fix:align & response changed

--- a/assets/css/dropdown.css
+++ b/assets/css/dropdown.css
@@ -29,7 +29,6 @@ body:has(#benefits-drop:checked) #benefits-sub{
 
 .ans{
     display: none;
-    font-size: 20px;
     color: #e8e8e8;
     padding: 10px 10px;
 }
@@ -44,7 +43,6 @@ body:has(#benefits-drop:checked) #benefits-sub{
 
 .quzz{
     font-size: large;
-    font-weight:bold;
     padding: 12px 0 5px 0;
 }
 
