--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -50,10 +50,6 @@ nav > a > svg > path {
   transition: fill 1s ease;
 }
 
-/* .nav--links:focus {
-    border: 2px solid red;
-} */
-
 #profile-section {
   width: 90%;
   margin: 40px auto;
@@ -77,7 +73,7 @@ nav > a > svg > path {
 }
 
 #profile-text-div > h2 {
-  font-size: 60px;
+  font-size: 50px;
   font-weight: bold;
   color: var(--brand-color);
 }
@@ -132,8 +128,8 @@ nav > a > svg > path {
 
 /* about */
 .video-big {
-  width: 80vw;
-  height: 70vh;
+  width: 50vw;
+  height: 45vh;
   border-radius: 5px;
   margin: 0 auto;
 }
@@ -147,15 +143,15 @@ nav > a > svg > path {
 }
 
 .heading-1 {
-  font-size: 60px;
+  font-size: 50px;
   font-weight: bold;
   color: var(--brand-color);
 }
 
 .para {
   font-size: 25px;
-  margin-top: 2vh;
-  margin-bottom: 3vh;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 #course-section {
@@ -174,10 +170,10 @@ nav > a > svg > path {
 
 /* card */
 .card {
-  width: 20vw;
-  height: 62vh;
+  width: 300px;
+  height: 400px;
   background-color: #fff;
-  border-radius: 14px;
+  border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 4px 25px rgba(0, 0, 0, 0.15);
   margin: 3rem;
@@ -190,7 +186,7 @@ nav > a > svg > path {
 /* Top banner */
 .card-banner {
   position: relative;
-  height: 40vh;
+  height: 70%;
 }
 
 .badge-time {
@@ -205,7 +201,7 @@ nav > a > svg > path {
 }
 
 .card-content {
-  padding: 20px;
+  padding: 10px;
 }
 
 .card-title {
@@ -265,7 +261,7 @@ nav > a > svg > path {
 #contact-section {
   display: flex;
   flex-direction: column;
-  height: 45vh;
+  height: 8cm;
   background-color: snow;
 }
 
@@ -277,8 +273,8 @@ nav > a > svg > path {
 .contact-link {
   /* position: relative; */
   background-color: #333;
-  width: 8vw;
-  height: 8vw;
+  width: 80px;
+  height: 80px;
   color: snow;
   padding: 5px;
   margin: 20px;
@@ -304,10 +300,14 @@ nav > a > svg > path {
 
 /* footer */
 footer p {
-  font-size: xx-large;
   color: #bebebe;
   padding: 10px 0;
 }
+
+footer p:hover{
+  cursor: pointer;
+}
+
 
 footer {
   background-color: #333;
@@ -315,8 +315,12 @@ footer {
   bottom: 0;
   border-top: 1px solid #131723;
   padding: 0 2rem;
+  display: flex;
+  justify-content:space-around;
+  align-items: center;
+  padding-top: 20px;
 }
 
-.footer-p2{
-    font-size: 18px;
+.border-line{
+  border-left: 2px solid #5a5a5a;height:4rem;
 }
